# aoc_2025

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/solutions/: day1.rs  day2.rs  day3.rs
